<resources>
    <string name="app_name">Google Cloud Text To Speech</string>
    <string name="ettPtText">A sight or prospect, typically of attractive natural scenery, that can be taken in by the eye from a particular place.</string>
    <string name="tvwPtCountry">Language:</string>
    <string name="tvwPtStyle">Style:</string>
    <string name="tvwPtGender">Gender:</string>
    <string name="tvwPtNaturalSampleRateHertz">NaturalSampleRateHertz:</string>
    <string name="tvwPtPitch">Pitch Rate:</string>
    <string name="tvwPtSpeakRate">Speak Rate:</string>
    <string name="btnPtSpeechText">Speak</string>
    <string name="btnPtSpeechResume">Resume</string>
    <string name="btnPtSpeechPause">Pause</string>
    <string name="btnPtSpeechStop">Stop</string>
    <string name="btnPtRefresh">Refresh</string>
</resources>
